[FEATURE] exclude integration tests classes from coverage report

--- a/match-api/pom.xml
+++ b/match-api/pom.xml
@@ -33,7 +33,7 @@
     <sonar.projectKey>piotrmichalowski96_match-api</sonar.projectKey>
     <sonar.organization>piotrmichalowski96</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-    <sonar.coverage.exclusions>**/config/*, **/exception/*</sonar.coverage.exclusions>
+    <sonar.coverage.exclusions>**/config/*, **/exception/*, **/it/**</sonar.coverage.exclusions>
   </properties>
 
   <dependencies>
