--- a/bet-api/pom.xml
+++ b/bet-api/pom.xml
@@ -7,22 +7,24 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.0</version>
+    <version>3.3.1</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
   <groupId>com.piter</groupId>
   <artifactId>bet-api</artifactId>
-  <version>0.0.4-SNAPSHOT</version>
+  <version>0.0.5-SNAPSHOT</version>
 
   <name>bet-api</name>
   <description>Bet API microservice</description>
 
   <properties>
-    <java.version>17</java.version>
-    <spring-cloud.version>2022.0.3</spring-cloud.version>
-    <awaitility.version>4.2.0</awaitility.version>
-    <bet.commons.version>0.0.7-SNAPSHOT</bet.commons.version>
+    <java.version>21</java.version>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
+    <spring-cloud.version>2023.0.2</spring-cloud.version>
+    <awaitility.version>4.2.1</awaitility.version>
+    <bet.commons.version>0.0.8-SNAPSHOT</bet.commons.version>
     <docker.image.prefix>pmich96</docker.image.prefix>
     <docker.image.name>${project.artifactId}</docker.image.name>
     <sonar.projectKey>piotrmichalowski96_bet-api</sonar.projectKey>
@@ -64,8 +66,8 @@
     </dependency>
     <dependency>
       <groupId>de.flapdoodle.embed</groupId>
-      <artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>
-      <version>4.7.0</version>
+      <artifactId>de.flapdoodle.embed.mongo.spring31x</artifactId>
+      <version>4.11.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -109,7 +111,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.8</version>
+        <version>0.8.12</version>
         <executions>
           <execution>
             <goals>
@@ -129,7 +131,7 @@
       <plugin>
         <groupId>io.fabric8</groupId>
         <artifactId>docker-maven-plugin</artifactId>
-        <version>0.40.2</version>
+        <version>0.44.0</version>
         <configuration>
           <verbose>true</verbose>
           <images>
