--- a/bet-event-aggregator/src/main/docker/Dockerfile
+++ b/bet-event-aggregator/src/main/docker/Dockerfile
@@ -1,9 +1,9 @@
-FROM openjdk:17 as builder
+FROM alpine/java:21-jdk as builder
 WORKDIR application
 ADD maven/${project.build.finalName}.jar ${project.build.finalName}.jar
 RUN java -Djarmode=layertools -jar ${project.build.finalName}.jar extract
 
-FROM openjdk:17
+FROM alpine/java:21-jdk
 LABEL PROJECT_NAME=${project.artifactId} \
       PROJECT=${project.id}
 
