--- a/match-management/pom.xml
+++ b/match-management/pom.xml
@@ -7,23 +7,22 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.2</version>
+    <version>3.3.1</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
   <groupId>com.piter</groupId>
   <artifactId>match-management</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.2-SNAPSHOT</version>
 
   <name>match-management</name>
   <description>Match management service</description>
 
   <properties>
-    <java.version>17</java.version>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-    <spring-cloud.version>2021.0.3</spring-cloud.version>
-    <jackson.version>2.13.3</jackson.version>
+    <java.version>21</java.version>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
+    <spring-cloud.version>2023.0.2</spring-cloud.version>
     <docker.image.prefix>pmich96</docker.image.prefix>
     <docker.image.name>${project.artifactId}</docker.image.name>
   </properties>
@@ -79,7 +78,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-jsr310</artifactId>
-      <version>2.13.3</version>
+      <version>2.17.1</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -94,9 +93,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.github.tomakehurst</groupId>
+      <groupId>org.wiremock</groupId>
       <artifactId>wiremock</artifactId>
-      <version>2.27.2</version>
+      <version>3.7.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -123,7 +122,7 @@
       <plugin>
         <groupId>io.fabric8</groupId>
         <artifactId>docker-maven-plugin</artifactId>
-        <version>0.40.2</version>
+        <version>0.44.0</version>
         <configuration>
           <verbose>true</verbose>
           <images>
