[FEATURE] local dev configuration

--- a/bet-api/src/main/resources/application-DEV.yaml
+++ b/bet-api/src/main/resources/application-DEV.yaml
@@ -3,6 +3,10 @@ spring:
   data.mongodb:
     port: 27017
     host: localhost
+    username: mongoUsername
+    password: mongoPassword
+    database: betLeague
+    authentication-database: admin
   cloud.config.enabled: false
 
 ########################
