--- a/match-api/src/main/resources/application-DEV.yaml
+++ b/match-api/src/main/resources/application-DEV.yaml
@@ -3,13 +3,17 @@ spring:
   data.mongodb:
     port: 27017
     host: localhost
+    username: mongoUsername
+    password: mongoPassword
+    database: betLeague
+    authentication-database: admin
   cloud.config.enabled: false
 
 ########################
 # Cloud stream
 ########################
 spring.cloud.stream:
-  kafka.binder.brokers: localhost:9092
+  kafka.binder.brokers: localhost:29092
   bindings:
     matches-out-0:
       destination: sample-match-topic-3
@@ -24,7 +28,7 @@ security.mode: true
 spring.security.oauth2.resourceserver.opaqueToken:
   introspection-uri: http://localhost:8080/realms/BetSpringBootKeycloak/protocol/openid-connect/token/introspect
   client-id: bet-login-app
-  client-secret: DQaXG75c2bAqfHA3CXsboQek4xxF2Y6Y
+  client-secret: JwEIU0vtWtSVOQxsW46ZqBXNypYahQp7
 
 ########################
 # Logging
